--- a/docs/语言基础/语言介绍.md
+++ b/docs/语言基础/语言介绍.md
@@ -65,20 +65,20 @@ scanf , printf 输入输出 在cstdio头文件中
 ## 运算
 
 - 算数运算
-  $$
-  + : 加法\\
-  - : 减法\\
-  * : 乘法\\
-  / : 除法\\
-  ％ : 取模运算\\
-  若运算中无浮点数，最终运算结果为整形， 否则为浮点型\\
-  如 x(int) , y(double)\\
-  x / 3为整形\\
-  x / 3.0为浮点型\\
-  x / y 为浮点型\\
-  x * 1 / 3 为整形\\
+  ```
+  + : 加法
+  - : 减法
+  * : 乘法
+  / : 除法
+  ％ : 取模运算
+  若运算中无浮点数，最终运算结果为整形， 否则为浮点型
+  如 x(int) , y(double)
+  x / 3为整形
+  x / 3.0为浮点型
+  x / y 为浮点型
+  x * 1 / 3 为整形
   x * 1.0 / 3为浮点型
-  $$
+  ```
   
 
 ## 分支结构
