--- a/docs/数据结构/线段树.md
+++ b/docs/数据结构/线段树.md
@@ -300,3 +300,459 @@ signed main(){
 ​	[P2572 SCOI2010\] 序列操作](https://www.luogu.com.cn/problem/P2572)
 
 by qwerty111111
+
+# 线段树（结构体）
+
+这里更新了结构体实现的线段树，供oier们参考。
+
+如果你是初学者，建议参考**qwerty111111**同学的[线段树（hyoi码风）](https://lav2.top/数据结构/线段树/)这篇文章，结合图片和文字理解线段树的原理和实现方式。这里仅给出一个大致的参考模板和一些细节的解释。
+
+## 结构体
+
+我们定义一个 $struct$ 类型的结构体。
+
+```cpp
+struct node{
+    int l,r,sum,tag;
+}tree[N<<2];
+```
+
+我们通过以上代码，做到了定义结构体和开数组两件事。
+
+$tree$ 数组像上面这样直接放在 $\}$ 符号的后面就可以直接开数组。当然，如果麻烦一点的话，你也可以这样写：
+
+```cpp
+struct node{
+    int l,r,sum,tag;
+};
+node tree[N<<2];
+```
+
+这里的 $N<<2$ 等同于 $N*4$ ，即原数组 $4$ 倍大小空间的数组（ $4$ 倍原因详见文章**线段树（hyoi码风）**）。
+
+（tips：$<<$ 和 $>>$ 是位运算，意思是将二进制下的数左移/右移，在运算结果上，每左移/右移一位，就等效于 $\times2$ 或 $\div2$ 。）
+
+$l$ 和 $r$ 是区间的左、右端点，$sum$ 是 $l$ 到 $r$ 这段区间的数的总和，$tag$ 是懒标记。
+
+在不同的题目当中，结构体里需要存放的内容可能有所不同。比如，如果你需要维护区间最大/最小值，可以直接在结构体内定义。
+
+```cpp
+struct node{
+    int l,r,sum,maxn,minx,tag;
+}tree[N<<2];
+```
+
+是的，你可以用线段树同时维护区间和/区间乘/区间最值等其他信息，这是线段树的一大优势所在。
+
+平时做题的时候需要维护什么信息就写什么即可。
+
+## 信息上传
+
+我们用 $maintain$ 函数把子节点的信息上传。
+
+```cpp
+void maintain(int p){
+    tree[p].sum=tree[p<<1].sum+tree[p<<1|1].sum;
+    tree[p].maxn=max(tree[p<<1].maxn,tree[p<<1|1].maxn);
+    tree[p].minx=min(tree[p<<1].minx,tree[p<<1|1].minx);
+}
+```
+
+实际使用时需要维护什么信息写什么即可，这里列出一部分给大家参考。
+
+这里的 $p<<1$ 相当于 $p*2$ ，$p<<1|1$ 相当于 $p*2+1$ 。平时根据个人习惯选择使用即可。
+
+我们可以在前面加两个定义：
+
+```cpp
+#define lp p<<1
+#define rp p<<1|1
+```
+
+$\#define$ 是宏定义，利用好它的话，我们就可以节省很多时间以及代码量。具体定义为什么也根据个人习惯，但是最好不要和其他已存在的变量名或函数名等发生冲突。
+
+于是我们就可以这样写：
+
+```cpp
+void maintain(int p){
+    tree[p].sum=tree[lp].sum+tree[rp].sum;
+    tree[p].maxn=max(tree[lp].maxn,tree[rp].maxn);
+    tree[p].minx=min(tree[lp].minx,tree[rp].minx);
+}
+```
+
+## 建树
+
+```cpp
+void build(int p,int l,int r){
+    tree[p].l=l;
+    tree[p].r=r;
+    tree[p].tag=0;
+    if(l==r){
+        tree[p].sum=tree[p].maxn=tree[p].minx=a[l];//这里也是需要用到什么写什么即可
+        return;
+    }
+    int mid=l+r>>1;
+    build(lp,l,mid),build(rp,mid+1,r);
+    maintain(p);
+}
+```
+
+如果你需要维护乘法懒标记，记得将标记初始值赋为 $1$ ，否则会出问题（因为 $0$ 乘任何数都是 $0$ ）。示例见最下方代码实现部分。
+
+## 懒标记下传
+
+只包含区间加的懒标记下传：
+
+```cpp
+void pushdown(int p){
+    if(tree[p].tag){//如果懒标记存在,就执行下面的标记下传工作
+        tree[lp].sum+=(tree[lp].r-tree[lp].l+1)*c;
+        tree[rp].sum+=(tree[rp].r-tree[rp].l+1)*c;
+        tree[lp].maxn+=c;
+        tree[rp].maxn+=c;//需要用到就写，这里是为了提供示例
+        tree[lp].tag+=c;
+        tree[rp].tag+=c;
+        tree[p].tag=0;//懒标记下传后记得清空
+    }
+}
+```
+
+同时包含区间加和区间乘的懒标记下传：
+
+```cpp
+void pushdown(int p){
+    tree[lp].sum=(tree[lp].sum*tree[p].mul+(tree[lp].r-tree[lp].l+1)*tree[p].add);
+    tree[rp].sum=(tree[rp].sum*tree[p].mul+(tree[rp].r-tree[rp].l+1)*tree[p].add);
+    tree[lp].mul*=tree[p].mul;
+    tree[rp].mul*=tree[p].mul;
+    tree[lp].add+=tree[p].add;
+    tree[rp].add+=tree[p].add;
+    tree[p].mul=1;
+    tree[p].add=0;//记得复原懒标记
+    return;
+}
+```
+
+这里的 $mul$ 和 $add$ 分别为乘和加的懒标记。
+
+以上两种标记下传，一个比较常用，一个代码比较难调，这里代码都已经给出。实际上有很多难度较大的题中的懒标记下传需要自己来设计，那就需要自己多练题总结思路和经验。
+
+## 修改操作
+
+### 区间修改
+
+区间加：
+
+```cpp
+void add(int p,int l,int r,int c){//区间内每个数都加上c
+    if(tree[p].l>=l&&tree[p].r<=r){//需要修改的区间包含了这个节点维护的区间，下文同理
+        tree[p].sum+=(tree[p].r-tree[p].l+1)*c;//区间内共有tree[p].r-tree[p].l+1个数，这些数都要加上c
+        tree[p].maxn+=c;//区间最大值加上c
+        tree[p].minx+=c;//区间最小值加上c
+        tree[p].tag+=c;//懒标记更新
+        return;
+    }
+    pushdown(p);//记得下传懒标记
+    int mid=tree[p].l+tree[p].r>>1;
+    if(l<=mid)add(lp,l,r,c);
+    if(r>mid)add(rp,l,r,c);
+    maintain(p);
+}
+```
+
+tips：$tree[p].l+tree[p].r>>1$  等同于 $(l+r)/2$ ，这里 $l+r$ 无需带括号的原因是 $+$ 的优先级高于位运算。
+
+区间乘：
+
+```cpp
+void mul(int p,int l,int r,int c){//区间内每个数都乘上c
+    if(tree[p].l>=l&&tree[p].r<=r){
+        tree[p].sum*=c;
+        tree[p].maxn*=c;
+        tree[p].minx*=c;
+        tree[p].mul*=c;
+        tree[p].add*=c;
+        return;
+    }
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1;
+    if(l<=mid)mul(lp,l,r,c);
+    if(r>mid)mul(rp,l,r,c);
+    maintain(p);
+}
+```
+
+### 单点修改
+
+```cpp
+void update(int p,int x,int c){//将位置x上的数的值修改为c
+    if(tree[p].l==tree[p].r){
+        tree[p].sum=tree[p].maxn=tree[p].minx=c;
+        return;
+    }
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1;
+    if(x<=mid)update(lp,x,c);
+    else update(rp,x,c);
+    maintain(p);
+}
+```
+
+实际上可以直接用区间修改来做到单点修改，只需要查询时像这样调用函数 $add(1,l,l,c)$ （左端点和右端点都为 $l$ ）即可~~这就是你不记单点修改代码的理由？？？~~。
+
+单点查询同理，下文不再赘述。
+
+## 查询操作
+
+### 区间查询（区间和）
+
+```cpp
+int ask(int p,int l,int r){
+    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].sum;//需要查询的区间包含了这个节点维护的区间，下文同理
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1,ans=0;
+    if(l<=mid)ans+=ask(lp,l,r);
+    if(r>mid)ans+=ask(rp,l,r);
+    return ans;
+}
+```
+
+### 区间最大值
+
+```cpp
+int ask(int p,int l,int r){
+    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].maxn;
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1,ans=-1e16;//ans初始赋极小值
+    if(l<=mid)ans=max(ans,ask(lp,l,r));
+    if(r>mid)ans=max(ans,ask(rp,l,r));
+    return ans;
+}
+```
+
+### 区间最小值
+
+```cpp
+int ask(int p,int l,int r){
+    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].minx;
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1,ans=1e16;//ans初始赋极大值
+    if(l<=mid)ans=min(ans,ask(lp,l,r));
+    if(r>mid)ans=min(ans,ask(rp,l,r));
+    return ans;
+}
+```
+
+### 单点查询
+
+```cpp
+int ask(int p,int x){
+    if(tree[p].l==tree[p].r)return tree[p].sum;//或者tree[p].maxn/tree[p].minx
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1;
+    if(x<=mid)return ask(lp,x);
+    else return ask(rp,x);
+}
+```
+
+## 代码实现
+
+下面给出两个结构体线段树代码实现的示例。
+
+仅区间加：
+
+```cpp
+#include<bits/stdc++.h>
+#define lp p<<1
+#define rp p<<1|1
+using namespace std;
+const int N=1e5+10;
+int n,m,a[N];
+struct node{
+    int l,r,sum,tag;
+}tree[N<<2];
+void maintain(int p){
+    tree[p].sum=tree[lp].sum+tree[rp].sum;
+}
+void build(int p,int l,int r){
+    tree[p].l=l;
+    tree[p].r=r;
+    tree[p].tag=0;
+    if(l==r){
+        tree[p].sum=a[l];
+        return;
+    }
+    int mid=l+r>>1;
+    build(lp,l,mid),build(rp,mid+1,r);
+    maintain(p);
+}
+void pushdown(int p){
+    if(tree[p].tag){
+        tree[lp].sum+=(tree[lp].r-tree[lp].l+1)*tree[p].tag;
+        tree[rp].sum+=(tree[rp].r-tree[rp].l+1)*tree[p].tag;
+        tree[lp].tag+=tree[p].tag;
+        tree[rp].tag+=tree[p].tag;
+        tree[p].tag=0;
+    }
+}
+void add(int p,int l,int r,int c){
+    if(tree[p].l>=l&&tree[p].r<=r){
+        tree[p].sum+=(tree[p].r-tree[p].l+1)*c;
+        tree[p].tag+=c;
+        return;
+    }
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1;
+    if(l<=mid)add(lp,l,r,c);
+    if(r>mid)add(rp,l,r,c);
+    maintain(p);
+}
+int ask(int p,int l,int r){
+    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].sum;
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1,ans=0;
+    if(l<=mid)ans+=ask(lp,l,r);
+    if(r>mid)ans+=ask(rp,l,r);
+    return ans;
+}
+int main(){
+    cin>>n>>m;
+    for(int i=1;i<=n;i++)cin>>a[i];
+    build(1,1,n);//请一定要记得建树，这一步很容易被忽略，忽略后很不容易被发现
+    for(int i=1;i<=m;i++){
+        int op;//op为操作类型
+        cin>>op;
+        if(op==1){
+            int x,y,k;
+            cin>>x>>y>>k;
+            add(1,x,y,k);//区间[x,y]内的每一个数加上k 
+        }
+        else{
+            int x,y;
+            cin>>x>>y;
+            cout<<ask(1,x,y)<<'\n';//询问区间[x,y]的区间和 
+        }
+    }
+    return 0;
+}
+```
+
+区间加和区间乘：
+
+```cpp
+#include<bits/stdc++.h>
+#define lp p<<1
+#define rp p<<1|1
+using namespace std;
+const int N=1e5+10;
+int n,m,a[N];
+struct node{
+	int l,r,sum,add,mul;
+}tree[N<<2];
+void maintain(int p){
+	tree[p].sum=tree[lp].sum+tree[rp].sum;
+}
+void build(int p,int l,int r){
+	tree[p].l=l;
+	tree[p].r=r;
+	tree[p].add=0;
+	tree[p].mul=1;
+	if(l==r){
+		tree[p].sum=a[l];
+		return;
+	}
+	int mid=l+r>>1;
+	build(lp,l,mid),build(rp,mid+1,r);
+	maintain(p);
+}
+void pushdown(int p){
+    tree[lp].sum=(tree[lp].sum*tree[p].mul+(tree[lp].r-tree[lp].l+1)*tree[p].add);
+    tree[rp].sum=(tree[rp].sum*tree[p].mul+(tree[rp].r-tree[rp].l+1)*tree[p].add);
+    tree[lp].mul*=tree[p].mul;
+    tree[rp].mul*=tree[p].mul;
+    tree[lp].add+=tree[p].add;
+    tree[rp].add+=tree[p].add;
+    tree[p].mul=1;
+    tree[p].add=0;//记得复原懒标记
+    return;
+}
+void mul(int p,int l,int r,int c){//区间内每个数都乘上c
+    if(tree[p].l>=l&&tree[p].r<=r){
+        tree[p].sum*=c;
+        tree[p].mul*=c;
+        tree[p].add*=c;
+        return;
+    }
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1;
+    if(l<=mid)mul(lp,l,r,c);
+    if(r>mid)mul(rp,l,r,c);
+    maintain(p);
+}
+void add(int p,int l,int r,int c){//区间内每个数都加上c
+    if(tree[p].l>=l&&tree[p].r<=r){//需要修改的区间包含了这个节点维护的区间，下文同理
+        tree[p].sum+=(tree[p].r-tree[p].l+1)*c;//区间内共有tree[p].r-tree[p].l+1个数，这些数都要加上c
+        tree[p].add+=c;//懒标记更新
+        return;
+    }
+    pushdown(p);//记得下传懒标记
+    int mid=tree[p].l+tree[p].r>>1;
+    if(l<=mid)add(lp,l,r,c);
+    if(r>mid)add(rp,l,r,c);
+    maintain(p);
+}
+int ask(int p,int l,int r){
+    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].sum;//需要查询的区间包含了这个节点维护的区间，下文同理
+    pushdown(p);
+    int mid=tree[p].l+tree[p].r>>1,ans=0;
+    if(l<=mid)ans+=ask(lp,l,r);
+    if(r>mid)ans+=ask(rp,l,r);
+    return ans;
+}
+int main(){
+	cin>>n>>m;
+	for(int i=1;i<=n;i++)cin>>a[i];
+	build(1,1,n);
+	for(int i=1;i<=m;i++){
+        int op;//op为操作类型
+        cin>>op;
+        if(op==1){
+        	int x,y,k;
+        	cin>>x>>y>>k;
+        	mul(1,x,y,k);//区间内每一个数乘上k 
+        }
+        else if(op==2){
+            int x,y,k;
+            cin>>x>>y>>k;
+            add(1,x,y,k);//区间[x,y]内的每一个数加上k 
+        }
+        else{
+            int x,y;
+            cin>>x>>y;
+            cout<<ask(1,x,y)<<'\n';//询问区间[x,y]的区间和 
+        }
+    }
+	return 0;
+}
+```
+
+## 例题
+
+[P4939 Agent2](https://www.luogu.com.cn/problem/P4939)
+
+[P1253 扶苏的问题](https://www.luogu.com.cn/problem/P1253)
+
+[P1471 方差](https://www.luogu.com.cn/problem/P1471)
+
+[P4145 上帝造题的七分钟 2 / 花神游历各国](https://www.luogu.com.cn/problem/P4145)
+
+[P4513 小白逛公园](https://www.luogu.com.cn/problem/P4513)
+
+[P6327 区间加区间 sin 和](https://www.luogu.com.cn/problem/P6327)
+
+[P2572 [SCOI2010] 序列操作](https://www.luogu.com.cn/problem/P2572)
+
+***
+
+by loynyng_fasfy
