--- a/docs/基础算法/前缀和与差分.md
+++ b/docs/基础算法/前缀和与差分.md
@@ -1,12 +1,12 @@
-# 前缀和
+## 前缀和
 
-## 定义
+### 定义
 
 前缀和可以理解为一个数组前 $n$ 项的和，常用于优化代码时间复杂度上。
 
 C++ 标准库中实现了前缀和函数 [`std::partial_sum`](https://zh.cppreference.com/w/cpp/algorithm/partial_sum)，定义于头文件 `<numeric>` 中。
 
-## 一维前缀和
+### 一维前缀和
 
 给定一个数组 $a$，维护一个前缀和数组 $h$，$h_i$ 表示数组 $a$ 中 $a_1,a_2,...a_i$ 的和。
 $$
@@ -19,7 +19,7 @@ $$
  h[i] = h[i - 1] + a[i];
  ```
 
-### 求区间和
+#### 求区间和
 
 利用前缀和求一个区间的长度就非常的简单了，根据前缀和的定义可得
 $$
@@ -29,13 +29,13 @@ S_{l,r} &= \sum_{i=l}^{r}a[i]\\
 \end{align}
 $$
 
-### 例题
+#### 例题
 
 [P8218 【深进1.例1】求区间和](https://www.luogu.com.cn/problem/P8218)
 
 [P3131](https://www.luogu.com.cn/problem/P3131)
 
-## 二维前缀和/多维前缀和
+### 二维前缀和/多维前缀和
 
 顾名思义，二维前缀和即维护二维数组前缀和
 
@@ -101,9 +101,9 @@ $$
 
 
 
-# 差分
+## 差分
 
-## 一维差分
+### 一维差分
 
 前缀和，是维护和，那差分就是维护差咯，但与前缀和维护的有所不同，一维差分维护的是后一个元素与前一个元素的差。
 
@@ -112,7 +112,7 @@ $$
 d[i]=a[i]-a[i-1]
 $$
 
-### 性质
+#### 性质
 
 $1.$ 数组 $a$ 的差分数组的前缀和数组就等于原数组 $a$，即 $h[i]=a[i]=h[i-1]\ +\ d[i]$
 
@@ -126,14 +126,14 @@ $3.$ 区间修改，这是差分数组最重要也是最常用的一条。当我
 
 [P4552](https://www.luogu.com.cn/problem/P4552)
 
-## 二维差分
+### 二维差分
 
 根据二维前缀和公式和差分数组的定义，我们可以推出二维差分的公式。
 $$
 d[i][j]=a[i][j]-a[i-1][j]-a[i][j-1]+a[i-1][j-1]
 $$
 
-### 性质
+#### 性质
 
 $1.$ 二维差分的性质和一维相似，我们可以通过差分数组求出原数组。
 $$
@@ -153,13 +153,13 @@ d[x2+1][y1]&-=x
 \end{align}
 $$
 
-# 树上差分
+## 树上差分
 
 树上差分，顾名思义，就是在树上进行差分，以起到优化复杂度的目的。主要作用是对树上的路径进行修改和查询操作，在修改多、查询少的情况下复杂度比较优秀。
 
 在一般情况下，树上差分一般分为点差分和边差分
 
-## 点差分
+### 点差分
 
 例如，一个树初始状态下点权都是 $0$，要求对路径 $(x,y)$ 上的所有点做点权$+1$的操作
 ![](https://cdn.luogu.com.cn/upload/image_hosting/gkb3p1l0.png)
@@ -174,7 +174,7 @@ $$
 
 在 $(8,4)$ 路径上 $d_8$ 的权值为 $1$，$d_4$ 的权值变为 $1$，从 $d_4$ 到 $d_{fa[lca(10,8)]} = d_2$ 的路径上 $d_4$ 的 $+1$ 和 $d_2$ 的 $-1$ 相互抵消，消除了对 $lca$ 以上的节点的影响
 
-### 总结
+#### 总结
 
 处理 $(x,y)$ 路径上的点差分 等价于
 $$
@@ -182,7 +182,7 @@ d_x + 1,d_y + 1,d_{lca(x,y)}- 1,d_{fa(lca(x,y))}-1
 $$
 
 
-## 边差分
+### 边差分
 
 例如，一个树初始状态下各边边权都为 $0$，现对路径$(x,y)$ 上的边均做 $+1$ 操作
 
@@ -196,14 +196,14 @@ $$
 
 过程同上
 
-### 总结
+#### 总结
 
 处理路径 $(x,y)$ 上的边差分等价于
 $$
 d_x + 1,d_y + 1,d_{lca(x,y)}-2
 $$
 
-## 特殊情况 当树的初始都不为 $0$
+### 特殊情况 当树的初始都不为 $0$
 
 以上所举的例子都是初始状态为0的情况，那如果初始状态不为 $0$ 呢
 
@@ -215,7 +215,7 @@ $$
 
 之后再做差分操作，最后计算节点差分值的子树值
 
-## 例题
+### 例题
 
 [P3128 [USACO15DEC] Max Flow P](https://www.luogu.com.cn/problem/P3128)
 
