--- a/docs/语言基础/语言基础.md
+++ b/docs/语言基础/语言基础.md
@@ -102,9 +102,9 @@ std::cout << #include <iostream>;
 std::cout << "#include <iostream>";
 ```
 
-完全没有问题！这时有人就会有问题了：假如我要输出双引号呢？解决方法是规定`\"`表示双引号这个字符，其中反斜杠`\\`被称作“转义字符”，相当于将`\"`的含义作了转换，从字符串的标志变作了一个字符。转移字符`\\`当然不只转义这一个内容，例如`\\n`就会被转义为换行，是的，换行也是一个字符，被表示为`\\n`，试着输出 `Hello \\n World`吧！
+完全没有问题！这时有人就会有问题了：假如我要输出双引号呢？解决方法是规定`\"`表示双引号这个字符，其中反斜杠`\`被称作“转义字符”，相当于将`"`的含义作了转换，从字符串的标志变作了一个字符。转移字符`\`当然不只转义这一个内容，例如`\n`就会被转义为换行，是的，换行也是一个字符，被表示为`\n`，试着输出 `Hello \n World`吧！
 
-问题又出现了，我们怎么输出`\\`这个字符？解决方法很简单，就是再转义一次，让`\\\\`表示`\\`这个字符，繁琐但有效，问题彻底被解决了。
+问题又出现了，我们怎么输出`\`这个字符？解决方法很简单，就是再转义一次，让`\\`表示`\`这个字符，繁琐但有效，问题彻底被解决了。
 
 ## 数据的存储与计算
 
