--- a/docs/数据结构/线段树.md
+++ b/docs/数据结构/线段树.md
@@ -1,10 +1,26 @@
-# 线段树（hyoi码风）
+# 线段树
 
-## 用途
+## 简介
 
-可以在 $O(\log n)$ 的时间复杂度内完成 单点修改 ， 区间修改 ， 区间查询等操作
+树状数组通过精细的二进制拆分，将任何一个前缀变成了 $\mathcal{O}(\log n)$ 个信息的拼接，同时利用所维护信息的可减性，将任意一个区间变作两个前缀的差，从而快速地维护出了区间信息。
 
-但内存 为 $O(4n)$ 常数很大 ， 使用时注意会不会爆内存
+注意树状数组维护内容的限制条件：假如询问的是区间而非前缀，那么我们维护的信息必须要有可减性：因为我们要将其表示为两个区间的差。
+
+于是我们想：有没有一种更加强大的数据结构，使得我们可以不关注信息是否可减而直接得出区间结果呢？非常幸运，这样的数据结构存在且并不困难，它就叫线段树。
+
+## 线段树的结构
+
+仿照树状数组的思路，我们希望能够将任何一个区间拆分成 $\mathcal{O}(\log n)$ 个小区间，并且在修改时快速维护这些小区间的变化，合并信息得到询问区间的答案。
+
+不妨设我们要维护的区间是 $[1,n]$，采取一种更为暴力的拆分方式：初始结点代表区间 $[1,n]$ 的信息，在这之后每个结点会生成两个新结点，称为它的子结点。代表区间 $[l,r]$ 的信息的区间的左子结点代表区间 $[l,\lfloor\frac{l+r}{2}\rfloor]$，右子结点代表区间 $[\lfloor\frac{l+r}{2}\rfloor+1,r]$，特别地，代表区间 $[x,x]$ 这一个元素的结点没有子结点。每个结点的子结点本质上将 $[l,r]$ 几乎均分为了两份。（“几乎”是因为取整符号）
+
+例如区间 $[1,7]$ 的子结点代表区间 $[1,4]$ 和 $[5,7]$，$[1,4]$ 的子结点代表区间 $[1,2]$ 和 $[3,4]$，$[5,7]$ 的子结点代表区间 $[5,6]$ 和 $[7,7]$，$[1,2]$，$[3,4]$，$[5,6]$ 的子结点分别为 $[1,1]$ 和 $[2,2]$、$[3,3]$ 和 $[4,4]$、$[5,5]$ 和 $[6,6]$，可以用下图的树状结构来描述一棵线段树：
+
+!!! note "待补充"
+
+	填坑中
+
+---
 
 ## 操作过程
 
@@ -287,64 +303,17 @@ signed main(){
 
 ## 题目精选
 
-​	[P2023 AHOI2009\] 维护序列](https://www.luogu.com.cn/problem/P2023)	
-
-​	[P4145 上帝造题的七分钟 2 / 花神游历各国](https://www.luogu.com.cn/problem/P4145)
-
-​	[P4513 小白逛公园](https://www.luogu.com.cn/problem/P4513)
-
-​	[P1471 方差](https://www.luogu.com.cn/problem/P1471)
-
-​	[P6327 区间加区间 sin 和](https://www.luogu.com.cn/problem/P6327)
-
-​	[P2572 SCOI2010\] 序列操作](https://www.luogu.com.cn/problem/P2572)
-
-by qwerty111111
-
-# 线段树（结构体）
-
-这里更新了结构体实现的线段树，供oier们参考。
-
-如果你是初学者，建议参考**qwerty111111**同学的[线段树（hyoi码风）](https://lav2.top/数据结构/线段树/)这篇文章，结合图片和文字理解线段树的原理和实现方式。这里仅给出一个大致的参考模板和一些细节的解释。
-
-## 结构体
-
-我们定义一个 $struct$ 类型的结构体。
-
-```cpp
-struct node{
-    int l,r,sum,tag;
-}tree[N<<2];
-```
-
-我们通过以上代码，做到了定义结构体和开数组两件事。
-
-$tree$ 数组像上面这样直接放在 $\}$ 符号的后面就可以直接开数组。当然，如果麻烦一点的话，你也可以这样写：
-
-```cpp
-struct node{
-    int l,r,sum,tag;
-};
-node tree[N<<2];
-```
-
-这里的 $N<<2$ 等同于 $N*4$ ，即原数组 $4$ 倍大小空间的数组（ $4$ 倍原因详见文章**线段树（hyoi码风）**）。
-
-（tips：$<<$ 和 $>>$ 是位运算，意思是将二进制下的数左移/右移，在运算结果上，每左移/右移一位，就等效于 $\times2$ 或 $\div2$ 。）
-
-$l$ 和 $r$ 是区间的左、右端点，$sum$ 是 $l$ 到 $r$ 这段区间的数的总和，$tag$ 是懒标记。
-
-在不同的题目当中，结构体里需要存放的内容可能有所不同。比如，如果你需要维护区间最大/最小值，可以直接在结构体内定义。
-
-```cpp
-struct node{
-    int l,r,sum,maxn,minx,tag;
-}tree[N<<2];
-```
-
-是的，你可以用线段树同时维护区间和/区间乘/区间最值等其他信息，这是线段树的一大优势所在。
-
-平时做题的时候需要维护什么信息就写什么即可。
+	[P2023 AHOI2009\] 维护序列](https://www.luogu.com.cn/problem/P2023)	
+	
+	[P4145 上帝造题的七分钟 2 / 花神游历各国](https://www.luogu.com.cn/problem/P4145)
+	
+	[P4513 小白逛公园](https://www.luogu.com.cn/problem/P4513)
+	
+	[P1471 方差](https://www.luogu.com.cn/problem/P1471)
+	
+	[P6327 区间加区间 sin 和](https://www.luogu.com.cn/problem/P6327)
+	
+	[P2572 SCOI2010\] 序列操作](https://www.luogu.com.cn/problem/P2572)
 
 ## 信息上传
 
@@ -368,8 +337,6 @@ void maintain(int p){
 #define lp p<<1
 #define rp p<<1|1
 ```
-
-$\#define$ 是宏定义，利用好它的话，我们就可以节省很多时间以及代码量。具体定义为什么也根据个人习惯，但是最好不要和其他已存在的变量名或函数名等发生冲突。
 
 于是我们就可以这样写：
 
@@ -499,50 +466,11 @@ void update(int p,int x,int c){//将位置x上的数的值修改为c
 }
 ```
 
-实际上可以直接用区间修改来做到单点修改，只需要查询时像这样调用函数 $add(1,l,l,c)$ （左端点和右端点都为 $l$ ）即可~~这就是你不记单点修改代码的理由？？？~~。
+实际上可以直接用区间修改来做到单点修改，只需要查询时像这样调用函数 $add(1,l,l,c)$ （左端点和右端点都为 $l$ ）即可。
 
 单点查询同理，下文不再赘述。
 
 ## 查询操作
-
-### 区间查询（区间和）
-
-```cpp
-int ask(int p,int l,int r){
-    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].sum;//需要查询的区间包含了这个节点维护的区间，下文同理
-    pushdown(p);
-    int mid=tree[p].l+tree[p].r>>1,ans=0;
-    if(l<=mid)ans+=ask(lp,l,r);
-    if(r>mid)ans+=ask(rp,l,r);
-    return ans;
-}
-```
-
-### 区间最大值
-
-```cpp
-int ask(int p,int l,int r){
-    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].maxn;
-    pushdown(p);
-    int mid=tree[p].l+tree[p].r>>1,ans=-1e16;//ans初始赋极小值
-    if(l<=mid)ans=max(ans,ask(lp,l,r));
-    if(r>mid)ans=max(ans,ask(rp,l,r));
-    return ans;
-}
-```
-
-### 区间最小值
-
-```cpp
-int ask(int p,int l,int r){
-    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].minx;
-    pushdown(p);
-    int mid=tree[p].l+tree[p].r>>1,ans=1e16;//ans初始赋极大值
-    if(l<=mid)ans=min(ans,ask(lp,l,r));
-    if(r>mid)ans=min(ans,ask(rp,l,r));
-    return ans;
-}
-```
 
 ### 单点查询
 
@@ -638,105 +566,6 @@ int main(){
 }
 ```
 
-区间加和区间乘：
-
-```cpp
-#include<bits/stdc++.h>
-#define lp p<<1
-#define rp p<<1|1
-using namespace std;
-const int N=1e5+10;
-int n,m,a[N];
-struct node{
-	int l,r,sum,add,mul;
-}tree[N<<2];
-void maintain(int p){
-	tree[p].sum=tree[lp].sum+tree[rp].sum;
-}
-void build(int p,int l,int r){
-	tree[p].l=l;
-	tree[p].r=r;
-	tree[p].add=0;
-	tree[p].mul=1;
-	if(l==r){
-		tree[p].sum=a[l];
-		return;
-	}
-	int mid=l+r>>1;
-	build(lp,l,mid),build(rp,mid+1,r);
-	maintain(p);
-}
-void pushdown(int p){
-    tree[lp].sum=(tree[lp].sum*tree[p].mul+(tree[lp].r-tree[lp].l+1)*tree[p].add);
-    tree[rp].sum=(tree[rp].sum*tree[p].mul+(tree[rp].r-tree[rp].l+1)*tree[p].add);
-    tree[lp].mul*=tree[p].mul;
-    tree[rp].mul*=tree[p].mul;
-    tree[lp].add+=tree[p].add;
-    tree[rp].add+=tree[p].add;
-    tree[p].mul=1;
-    tree[p].add=0;//记得复原懒标记
-    return;
-}
-void mul(int p,int l,int r,int c){//区间内每个数都乘上c
-    if(tree[p].l>=l&&tree[p].r<=r){
-        tree[p].sum*=c;
-        tree[p].mul*=c;
-        tree[p].add*=c;
-        return;
-    }
-    pushdown(p);
-    int mid=tree[p].l+tree[p].r>>1;
-    if(l<=mid)mul(lp,l,r,c);
-    if(r>mid)mul(rp,l,r,c);
-    maintain(p);
-}
-void add(int p,int l,int r,int c){//区间内每个数都加上c
-    if(tree[p].l>=l&&tree[p].r<=r){//需要修改的区间包含了这个节点维护的区间，下文同理
-        tree[p].sum+=(tree[p].r-tree[p].l+1)*c;//区间内共有tree[p].r-tree[p].l+1个数，这些数都要加上c
-        tree[p].add+=c;//懒标记更新
-        return;
-    }
-    pushdown(p);//记得下传懒标记
-    int mid=tree[p].l+tree[p].r>>1;
-    if(l<=mid)add(lp,l,r,c);
-    if(r>mid)add(rp,l,r,c);
-    maintain(p);
-}
-int ask(int p,int l,int r){
-    if(tree[p].l>=l&&tree[p].r<=r)return tree[p].sum;//需要查询的区间包含了这个节点维护的区间，下文同理
-    pushdown(p);
-    int mid=tree[p].l+tree[p].r>>1,ans=0;
-    if(l<=mid)ans+=ask(lp,l,r);
-    if(r>mid)ans+=ask(rp,l,r);
-    return ans;
-}
-int main(){
-	cin>>n>>m;
-	for(int i=1;i<=n;i++)cin>>a[i];
-	build(1,1,n);
-	for(int i=1;i<=m;i++){
-        int op;//op为操作类型
-        cin>>op;
-        if(op==1){
-        	int x,y,k;
-        	cin>>x>>y>>k;
-        	mul(1,x,y,k);//区间内每一个数乘上k 
-        }
-        else if(op==2){
-            int x,y,k;
-            cin>>x>>y>>k;
-            add(1,x,y,k);//区间[x,y]内的每一个数加上k 
-        }
-        else{
-            int x,y;
-            cin>>x>>y;
-            cout<<ask(1,x,y)<<'\n';//询问区间[x,y]的区间和 
-        }
-    }
-	return 0;
-}
-```
-
 ## 例题
 
 [P4939 Agent2](https://www.luogu.com.cn/problem/P4939)
@@ -752,7 +581,3 @@ int main(){
 [P6327 区间加区间 sin 和](https://www.luogu.com.cn/problem/P6327)
 
 [P2572 [SCOI2010] 序列操作](https://www.luogu.com.cn/problem/P2572)
-
-***
-
-by loynyng_fasfy
