--- a/docs/语言基础/语言基础.md
+++ b/docs/语言基础/语言基础.md
@@ -110,7 +110,7 @@ std::cout << "#include <iostream>";
 
 在本节的最开头，我们提出过计算一些数字和，这个任务在计算机中又该怎么完成呢？
 
-### 存储一个数字
+### 数字的存储
 
 在c++中，我们通过下面的方式定义一个整数：
 
@@ -173,7 +173,7 @@ int main() {
 }
 ```
 
-### 其他数据类型
+### 数据类型与运算符
 有些同学可能会兴奋地尝试其他加法，例如输入了`0.1 0.2`，但是输出了错误的结果！
 
 这是怎么一回事呢？计算机出错了？并不是，计算机会忠实地执行计算任务，只可能是代码本身出现的问题。
@@ -193,118 +193,13 @@ std::cout << x + y;
 !!! note "待补充"
 	待补充：数据类型表
 
-## 变量与常量
+数字的加、减、乘、除在c++中分别对应`+`、`-`、`*`、`/`，还有一种特殊的运算叫做取模，对应`%`，取模是整数与非零整数之间的运算，用小学生的语言来讲，`a % b`的结果就是 $a$ 除以 $b$ 的余数，例如 `3 % 2`的结果为`1`，用数学语言可以写作 $a \bmod b$，这个 $\bmod$ 就是c++中的`%`符号。
 
-常作为储存数值，字符串等的工具
+我们说过，整数和浮点数是不同类型的数据，但是两个整数做除法可能得到一个非整数！这时候c++会如何处理呢？是否会自动将它转化为浮点数类型？答案是否定的，两个`int`类型做除法得到的结果还是`int`类型，`int`之间的除法得到的结果是向下取整的除法，也有人叫地板除。同样用小学生的语言来描述，就是忽略余数之后做除法的结果，例如我们知道 $7$ 除以 $3$ 得 $2$ 余 $1$，于是在c++中，`7 / 3 = 2`，`7 % 3 = 1`，两个`double`（或`float`）之间做除法就没有这样的困扰，当然，它们不能进行取模运算。
 
-变量：在过程中可以变化的量
+!!! note "待补充"
 
-常量：在过程中保持不变的量 	~~(废话)~~
-
-### 变量的定义
-
-类型：int（整形 储存最大 2^32)  ， long long (长整型 储存最大 2 ^ 64) ， char(字符型) ，float(浮点型) , double(长浮点型) ，bool（布尔型：记录true 和 false的变量类型）。
-
-```cpp
-int a; // 定义整形变量a
-double b； // 定义浮点型变量b
-bool c; // 定义布尔变量c
-```
-
-变量命名规则：
-
-1. 只能出现数字  ， 字母 ， 及符号_。
-2. 数字不可单独作为变量名且不能让在变量名首
-
-### 常量的定义
-
-在定义变量前加const即可 ， 定义后全过程不可改变
-
-```cpp
-const int N = 10010; // 定义N 为 10010
-```
-
-
-
-## 输入输出
-
-在c++中
-
-```cpp
-cin , cout 为输入输出 在iostream头文件中
-格式
-    int a;
-    cin >> a; // 输入a
-	cout << a; // 输出a
-```
-
-```cpp
-scanf , printf 输入输出 在cstdio头文件中
-格式
-    int a;
-	scanf("%d" , &a);
-	printf("%d" , a);
-```
-
-## 运算
-
-- 算数运算
-
-```cpp
-+ : 加法
-- : 减法
-* : 乘法
-/ : 除法
-％ : 取模运算
-若运算中无浮点数，最终运算结果为整形， 否则为浮点型
-如 x(int) , y(double)
-x / 3为整形
-x / 3.0为浮点型
-x / y 为浮点型
-x * 1 / 3 为整形
-x * 1.0 / 3为浮点型
-```
-
-- 位运算
-
-```cpp
-& (按位与运算): 二进制下 两个数本位都为1 , 则结果为1  
-例 ： 1 & 1 = 1 , 0 & 1 = 0 , 0 & 0 = 0 , (二进制下) 101 & 110 = 100
-
-| (按位或运算): 二进制下 两个数有一个数本位为1 , 则结果为1
-例 ： 1 & 1 = 1 , 0 & 1 = 1 , 0 & 0 = 0 , (二进制下) 101 & 110 = 111
-
-~ (按位非) : 二进制下 每一位取反 (0 则变为 1 , 1 则变为 0)
-例 ：~ 1011 = 0100
-    
-^ (按位异或) : 二进制下 两个数 本位不同为 1 , 本位相同为 0
-例 ：(二进制下) 10 ^ 01 = 11 , 11 ^ 10 = 01
-    
->> (右移) ：把一个数在二进制下 右移··位 例： 101 >> 1 = 10 (即缩小2的k次方倍)
-<< (左移) ：把一个数在二进制下 左移··位 例： 101 << 1 = 1010(即扩大2的k次方倍)
-```
-
-- 比较运算
-
-```cpp
-> : 大于
->= : 大于等于
-< : 小于
-<= : 小于等于
-== : 等于 (注意 在c++中 , 单等号 = 为赋值符号 , 即把右边的值赋给左边 , 如 a = 1 , 把变量a赋值为1)
-!= : 不等于
-```
-
-- 逻辑运算
-
-```cpp
-&& : 逻辑与 , 两边都为真 则整体为真 , 否则为假
-例： (1 == 1) && (2 > 1) 为真 ， (2 < 3) && (4 < 3) 为假
-|| ：逻辑或 , 两边有一个为真 则整体为真 , 否则为假
-例： (1 != 1) || (2 < 114514) 为真 ，(3 > 1919810) || (false) 为假
-！：逻辑非 , 其为真则 其逻辑非为假 , 反之同理
-例： !false 为真 , !(1 == 1) 为假
-```
+​	待补充：运算符号表
 
 
 
