--- a/docs/闲话/Rubbish_Du/故事集.md
+++ b/docs/闲话/Rubbish_Du/故事集.md
@@ -18,3 +18,23 @@ $$
 
 ……
 
+## 2.冬眠
+
+> 冬眠（英语：Hibernation），也叫“冬蛰”。某些动物在冬季时生命活动处于极度降低的状态，是动物对冬季外界不良[环境条件](https://baike.baidu.com/item/环境条件/4846004?fromModule=lemma_inlink)（如食物缺少、寒冷）的一种适应。蝙蝠、刺猬、极地松鼠等都有冬眠习惯。冬眠，是一些[异温动物](https://baike.baidu.com/item/异温动物/104623?fromModule=lemma_inlink)（一些冬眠哺乳类与[鸟类](https://baike.baidu.com/item/鸟类/278334?fromModule=lemma_inlink)）和变温动物在寒冷冬季时其体温可降低到接近环境温度（几乎到0℃），全身呈麻痹状态，在环境温度进一步降低或升高到一定程度，或其他刺激下，其体温可迅速恢复到正常水平。
+
+~~宇宙安全声明：本文中的**“冬眠”**并非上述意思。~~
+
+冬天悄无声息地走来，气温出乎预料地骤降，人们不想起床，因为被窝里实在是太温暖了，不想起来受冻。
+
+自此开始，人们的“冬眠度”会增高，可能会得冬眠综合症，本篇提醒您：要加强室内通风力度并提高室外运动的频率哦~
+
+人们早上陆陆续续地来到机房，每次进门就会感觉到机房已经与外面的世界隔绝了，温暖扑面而来，使清醒的人们想再睡一觉，所以在早上经常有人睡觉。
+
+特殊时间：
+
+1.打完**cf**的那天早上，大部分的人们在睡大觉，叫醒他们只有两种方式，一个是老师叫，另一个是睡到自然醒。只有小部分人自律起床。
+
+2.假期睡啊睡
+
+3.中午睡啊睡
+
