--- a/docs/基础算法/贪心.md
+++ b/docs/基础算法/贪心.md
@@ -166,9 +166,8 @@ Problem Three
 
 !!! tip "证明"
 
-设 $1 \le i < j \le n$，$1 \le k < l \le n$，我们的匹配为 $\vert a_i - b_k\vert + \vert a_j - b_l\vert \\
-交叉后 , 得到 \vert a_i - b_l\vert + \vert a_j - b_k\vert$
-我们可以发现 , 交叉后的值总比上面的值多出来 $2(b_l - b_k)$, 则我们得到的匹配更优 , 则证毕。
+	设 $1 \le i < j \le n$，$1 \le k < l \le n$，我们的匹配为 $|a_i - b_k| + |a_j - b_l|$。
+	交叉后 , 得到 $|a_i - b_l| + |a_j - b_k|$，可以发现交叉后的值总比上面的值多 $2(b_l - b_k)$, 则我们得到的匹配更优, 证毕。
 
 ### 邻项交换
 
