--- a/docs/基础算法/贪心.md
+++ b/docs/基础算法/贪心.md
@@ -130,15 +130,16 @@
 
 !!! tip "证明"
 
-	$a$ 按降序排列， $b$ 按升序排列，设 $1 \le i < j \le n$, $1 \le k < l \le n$。我们的匹配为 $\max((a_i + b_k) , (a_j + b_l))。
+	$a$ 按降序排列， $b$ 按升序排列，设 $1 \le i < j \le n$, $1 \le k < l \le n$。我们的匹配为 $\max((a_i + b_k) , (a_j + b_l))$。
 	
 	交换后 , 对于 $a_j + b_l$,$a_i + b_k$, 可以得到 
 	$$
 	\max\big((a_j + b_l), (a_i + b_k)\big) \le \max\big((a_i + b_k), (a_j + b_l)\big)
 	$$
-因为 $a_i + b_k$ 是最大的,所以我们得到的序列肯定是更优的，证毕。
+	
+	因为 $a_i + b_k$ 是最大的,所以我们得到的序列肯定是更优的，证毕。
 
-Problem Three
+#### Problem Three
 
 ##### 题目描述
 
@@ -175,7 +176,7 @@ Problem Three
 
 ##### 题目描述
 
-$n$ 个数对 $(L_i , R_i)$ ,  定义 $F_i = \lfloor \frac{\prod_{j = 1}^{i - 1} \times L_jR_i \rfloor$ , 求一个最小化 $\max{F_i}$ 的排列。
+$n$ 个数对 $(L_i , R_i)$ ,  定义 $F_i=\lfloor \frac{\prod_{j = 1}^{i - 1} \times L_j} R_i \rfloor$, 求一个最小化 $\max{F_i}$ 的排列。
 
 ##### solution
 
