--- a/docs/基础算法/贪心.md
+++ b/docs/基础算法/贪心.md
@@ -143,7 +143,7 @@
 
 ##### 题目描述
 
-给定两个长度为 $n$ 的数组 $a$, $b$, 把他们配成 $n$ 对 $(a_i , b_i) , 使 $\sum^n_{i=1} a_ib_i$ 最大
+给定两个长度为 $n$ 的数组 $a$, $b$, 把他们配成 $n$ 对 $(a_i , b_i)$ , 使 $\sum^n_{i=1} a_ib_i$ 最大
 
 ##### solution
 
@@ -159,7 +159,7 @@
 
 ##### 题目描述
 
-给定两个长度为 $n$ 的数组 $a$ , $b$ , 把他们配成 $n$ 对 $(a_i , b_i) , 使 $\sum^n_{i = 1} |a_i - b_i|$最小
+给定两个长度为 $n$ 的数组 $a$ , $b$ , 把他们配成 $n$ 对 $(a_i , b_i)$ , 使 $\sum^n_{i = 1} |a_i - b_i|$最小
 
 ##### solution
 
