--- a/docs/基础算法/贪心.md
+++ b/docs/基础算法/贪心.md
@@ -176,7 +176,7 @@
 
 ##### 题目描述
 
-$n$ 个数对 $(L_i , R_i)$ ,  定义 $F_i=\lfloor \frac{\prod_{j = 1}^{i - 1} \times L_j} R_i \rfloor$, 求一个最小化 $\max{F_i}$ 的排列。
+$n$ 个数对 $(L_i , R_i)$ ,  定义 $F_i=\lfloor \frac{\prod_{j = 1}^{i - 1} \times L_j} {R_i} \rfloor$, 求一个最小化 $\max{F_i}$ 的排列。
 
 ##### solution
 
