--- a/docs/基础算法/贪心.md
+++ b/docs/基础算法/贪心.md
@@ -78,7 +78,9 @@
 
 如果存在一个区间，没有被所选的点覆盖 ， 那么他必定在上一问中被选出来作为新区间 ，矛盾 。
 
-#### Problem Three — 给 $n$ 个闭区间染色，使得相交的区间颜色不同，求最少需要多少种颜色
+#### Problem Three 
+
+给 $n$ 个闭区间染色，使得相交的区间颜色不同，求最少需要多少种颜色
 
 ![](https://img.picui.cn/free/2024/11/09/672f14b86e4b1.png)
 
