--- a/docs/闲话/LA/无题.md
+++ b/docs/闲话/LA/无题.md
@@ -6,7 +6,7 @@
 
 !!! tip 
 
-	下方文件为OI-Note，可能会由于网络原因暂时无法加载（由于在github上）
+	下方文件为OI-Note，在手机上或许会因为浏览器不支持预览而弹出下载窗口。
 
 <iframe src="/OI-Note.pdf" width="100%" height="800px"></iframe>
 
