--- a/docs/闲话/Rubbish_Du/故事集.md
+++ b/docs/闲话/Rubbish_Du/故事集.md
@@ -38,3 +38,20 @@ $$
 
 3.中午睡啊睡
 
+## 3.cf and atcoder
+
+> 以后不打CF了
+>
+> 回宿舍
+>
+> 我们教练员商量过了
+>
+> 大家都打，没有意义
+>
+> 好多水平不行
+>
+> -2024年11月15日20:14:04
+
+“咚咚咚！”，一条条消息在我面前飞速闪过，看完之后发现**cf**似了，但是，今晚的**cf**是在晚上八点三十五分开始的，阁下又该如何面对呢？我看着屏幕前发绿的**pupil**，不禁陷入了沉思，“我，果然太菜了啊，只会切A题”，但是，我还有个梦，就是**ak** **cf** **div.3**与**div.4**，那对于后天的**Genshin Impact**主题的**div.3**该怎么办了啊，不得不放弃了，但是还好之后还有一场下午+晚上的线上**ICPC**，但是以后的深夜都打不了啊，俗话说，退一步，海阔天空，我打出了一张**atcoder**，我还可以打**ABC**和**ARC**，我的**atcoder**还可以上大分，我看着屏幕前发绿的名字陷入了沉思，“我，果然还是太菜了啊，只会打**ABC**”，但是，我还有一个梦，就是**ak** **ABC**，还好明天就是**ABC**，后天还有**ARC**，会**win**吗？一定会**win**的啊！！！
+
+—2024年11月15日
