--- a/docs/组合数学/组合基础.md
+++ b/docs/组合数学/组合基础.md
@@ -13,3 +13,41 @@ $$
 为了写作方便，定义 $n!=n(n-1)(n-2)\cdots (2)(1)$，称作 “$n$ 的阶乘”，于是 $n$ 个元素的排列数就是 $n!$。
 
 更准确地，我们可以这样定义阶乘：
+$$
+n!=\begin{cases}
+1, &n=0\newline
+n \times (n-1)!, &n \ge 1
+\end{cases}
+$$
+
+一种等价的定义是
+$$
+n!=\prod_{i=1}^{n}i
+$$
+
+注意上面我们规定了 $0!=1$，一个比较合理的理解是空排列有且仅有一种（就是空），这样子表示“空”的边界条件在后面会频繁出现。
+
+做一个简单推广：从 $n$ 个不同元素中选出 $m$ 个元素组成的排列有多少种呢？显然就是 $n \times (n-1) \times \cdots \times (n-m+1)$，一共 $m$ 项，它就等于 $\frac{n!}{(n-m)!}$。
+
+还有一种表示方法叫做“下降幂”，记作 $x^{\underline n}=\prod_{i=0}^{n-1}(x-i)$。在 $x$ 为正整数且 $x \ge m$ 时，$x^{\underline m}=\frac{x!}{(x-m)!}$。发现什么了吗？阶乘的定义域为正整数但下降幂的底数可以是**任意实数**！高中数学课本中将 $\frac{n!}{(n-m)!}$ 记作 $A_n^m$，表示从 $n$ 个互异元素中选出 $m$ 个组成排列的方案数，但这个记号在OI中很冷门，大家都喜欢用下降幂 $n^{\underline m}$ 表示。
+
+对于下降幂，有 $n^{\underline 0}=1$（注意这导出了 $0^{\underline 0}=1$ 而非 $0$），$n^{\underline 1}=n$。若 $m > n$，则 $n^{\underline m} = 0$。
+
+## 组合数
+
+假如我们不关注选出元素的相对顺序，只考虑它们构成的集合，就得到的组合数。一般地，称从 $n$ 个互异元素中选出 $m$ 个元素组成的集合的方案数为 “$n$ 选 $m$”，记作 $\binom{n}{m}$。
+
+!!! tip "记号差异"
+    高中数学课本中选用的是另一种记号 $C_n^m$，注意上下标是相反的。
+
+一个大小为 $m$ 的集合可以变为 $m!$ 个排列，所以 $\binom{n}{m}$ 就应该等于 $n^{\underline m}$ 再除以 $m!$，即
+$$
+\binom{n}{m}=\frac{n^{\underline m}}{m!}
+$$
+
+注意，假如我们将排列数 $\frac{n!}{(n-m)!}$ 写成下降幂的形式，那么上标的定义域就可以扩展为 $\mathbb{R}$！假如采取阶乘的定义方式，定义域就是自然数，即 $\binom{n}{m}=\frac{n!}{m!(n-m)!}$。
+
+简单验证一下，$\binom{n}{0}= \frac{n^{\underline 0}}{0!}=1$（显然我们只有空集 $\varnothing$ 这一种选法）， $\binom{n}{1}=\frac{n^{\underline 1}}{1!}=n$，$\binom{n}{n}=1,\binom{n}{n+1}=0$。
+
+### 组合恒等式
+
