--- a/docs/闲话/LA/无题.md
+++ b/docs/闲话/LA/无题.md
@@ -1,14 +1,12 @@
 # 无题
 
-> 你又对我抱以何种想象呢？
+> 放下所有的渊源和冤缘愿怨
 
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=2110770755&auto=0&height=66"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=2617333311&auto=0&height=66"></iframe>
 
 !!! tip 
 
 	下方文件为OI-Note，在手机上或许会因为浏览器不支持预览而弹出下载窗口。
 
 <iframe src="/OI-Note.pdf" width="100%" height="800px"></iframe>
-
-> 还没想好该写什么......
 
