--- a/docs/游记/Rubbish_Du/2024NOIP游记.md
+++ b/docs/游记/Rubbish_Du/2024NOIP游记.md
@@ -2,7 +2,7 @@
 
 ## 序言
 
-![](bilibili:BV1ty411B7pb)
+<iframe src="//player.bilibili.com/player.html?bvid=BV1ty411B7pb" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
 
 ## DAY 0
 
@@ -50,4 +50,4 @@ $$
 
 其中有人把**mjh**的演讲给录了下来，只有音频。
 
-![](bilibili:BV1Kj411g7Lu)
+<iframe src="//player.bilibili.com/player.html?bvid=BV1Kj411g7Lu" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
