--- a/docs/闲话/Rubbish_Du/闲话集.md
+++ b/docs/闲话/Rubbish_Du/闲话集.md
@@ -79,3 +79,29 @@ whk和oi，一个都不能放下，毕竟，我想打省选，但是大概率是
 去追寻自身的平衡。
 
 [但](https://music.163.com/song?id=2035320743&uct2=U2FsdGVkX1+fp1XEkxEv1ogaDpPggX0LX5NhOimzlrg=)
+
+## 4.2024年12月28日
+
+不知不觉离今年结束还剩下3天，原来我已经学OI一年多了，回顾今年的赛季，还是感觉挂分太严重了，自己没有达到理想的成绩，但是不管怎样，至少我很开心啊，即使自己没有天赋，但是兴趣是最好的老师，我会一直一步一步走下去，直到走到道路的尽头，不留下遗憾，享受生活。
+
+所以省选我肯定是要考的，OI我现在还是要继续学的，但对于一个省选知识什么也不会的人来说，3个月好像也挺短的，再反过来看今年，我不知道我今年干了些什么，况且还是在寒假中备战，还想和朋友玩会儿，玩会儿游戏，时间因为快乐匆匆流逝。
+
+那我今年干了些什么啊？再再反过来看今年，以前不懂的知识现在熟练掌握，以前认为很难的算法现在理解了，我成长了，但是有一个问题，与他人相比我走的很慢，但是这个问题我早已习惯，我认为无需多虑。
+
+那我还记得我为什么学习OI吗？那是肯定的，首先我对其感兴趣，其次我想享受别样的生活，最后我并不是因为升学、不想写作业才学OI的。
+
+那假如再给我一年光明呢？我不知道会发生什么。
+
+那我身边的oier呢？今年认识了重庆一中现高一的大佬Shunpower和StayAlone。高二慢慢地认识另个校区的oier，之后机房一就热热闹闹熙熙攘攘，我难以评价。
+
+人生有梦，各自精彩。
+
+那说说另一件事吧，学校微信公众号的喜报，图片是上场NOIP的合照，获奖名单是上上场CSP-S第二轮的名单，这完全不一样啊，还有之前的喜报已经把学长说完了，结果这个又说了学长，这和学长也没关系啊，况且为什么只有信息学竞赛有喜报啊，其他竞赛呢，况且我认为今年的成绩也就一般般啊，与石二、衡水相比，我感觉我们缺少的东西太多了，我们真的太弱了。我们自身也是有原因的，毕竟我们是因为不同的目的学OI，这个气氛还是多少有点问题的，其次，不知为何感觉还有些东西不太行。
+
+只能祝愿未来的邯一竞赛越来越好吧…
+
+------
+
+苦恼着，歇斯底里着，痛苦着，不断挣扎的数月时间，这一切会在未来的某一瞬间得到回报。我们或许就是被那个瞬间迷住的，一种无可救药的生物吧。
+
+[光るなら](https://music.163.com/song?id=29732992&uct2=U2FsdGVkX1/pSdPCPe86ttEY2wrpardb4gvZr2XMMYU=)
