--- a/docs/图论/树的直径.md
+++ b/docs/图论/树的直径.md
@@ -95,7 +95,10 @@ $$
 ### [P2056 [ZJOI2007] 捉迷藏 ](https://www.luogu.com.cn/problem/P2056)
 
 - 利用性质4，用线段树来维护直径的长度，以及左右端点即可。
-
 - 用点分树做，维护三个堆。
+
+#### [P3629 [APIO2010] 巡逻 ](https://www.luogu.com.cn/problem/P3629)
+
+#### [Problem - F ](https://codeforces.com/gym/104976/problem/F)
 
 > 未完待续？
